--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,9 @@
 li {
-   <!-- htmlで書いたリスト先頭の黒点を消す -->
+   /* htmlで書いたリスト先頭の黒点を消す */
    list-style: none;
+  /* htmlで書いたリストを右側に横並びに配置する */
+   float: right;
+   
 }
 
 
