--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,8 @@ body {
 }
 
 /* ################################################ */
-li {
+/* liの前に.header-listとつけることで、headerのみに調整が適用される(footerには作用しない) */
+.header-list li {
    /* htmlで書いたリスト先頭の黒点を消す */
    list-style: none;
   /* htmlで書いたリストを右側に横並びに配置する */
