--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,18 +6,19 @@ li {
   list-style: none;
   /* floatプロパティをleftにしてください */
   float: left;
-  
+  color: #ffffff;
 }
 
 .header {
   background-color: #191970;
-  height: 90px;
+  height: 120px;
 }
 
 /* header-logoの文字の大きさを36px、floatプロパティをleftにしてください */
 .header-logo{
   font-size: 36px;
   float: left;
+  color: #ffffff;
 }
 
 .main {
@@ -27,5 +28,5 @@ li {
 
 .footer {
   background-color: #191970;
-  height: 270px;
+  height: 90px;
 }
