--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ li {
   list-style: none;
   /* floatプロパティをleftにしてください */
   float: left;
-  color: #ffffff;
+  font-color: #ffffff;
 }
 
 .header {
@@ -18,6 +18,7 @@ li {
 .header-logo {
   float: left;
   font-size: 36px;
+  font-color: #ffffff;
 }
 
 .main {
