--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,11 +6,11 @@ li {
   list-style: none;
   /* floatプロパティをleftにしてください */
   float: left;
-  font-color: #ffffff;
 }
 
 .header {
   background-color: #191970;
+  color: #fff;
   height: 100px;
 }
 
@@ -18,7 +18,6 @@ li {
 .header-logo {
   float: left;
   font-size: 36px;
-  font-color: #ffffff;
 }
 
 .main {
