--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,8 +4,9 @@ body {
 
 li {
   list-style: none;
-  /* floatプロパティをleftにしてください */
-  float: left;
+  float: left;  
+  /* 上下のpaddingを33px、左右のpaddingを20pxにしてください */
+  padding: 33px 20px;
 }
 
 .header {
@@ -18,6 +19,8 @@ li {
 .header-logo {
   float: left;
   font-size: 36px;
+/* 上下のpaddingを20px、左右のpaddingを40pxにしてください */
+  padding: 20px 40px;
 }
 
 .main {
