--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,9 +4,9 @@ body {
 
 li {
   list-style: none;
-  float: left;  
+  float: right;  
   /* 上下のpaddingを33px、左右のpaddingを20pxにしてください */
-  padding: 33px 20px;
+  padding: 20px 20px;
 }
 
 .header {
