--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@ li {
   list-style: none;
   float: right;  
   /* 上・右・下・左のpaddingを40px、20px、20px、20pxにしてください */
-  padding: 40px 40px 20px 20px;
+  padding: 35px 40px 20px 20px;
 }
 
 .header {
@@ -23,8 +23,7 @@ li {
   font-size: 36px;
 /* 上下のpaddingを20px、左右のpaddingを40pxにしてください */
   padding: 20px 40px;
-  /*  */
-  margin-top: 0;
+  /* margin-top: 0; */
 }
 
 .main {
@@ -35,5 +34,5 @@ li {
 .footer {
   background-color: #191970;
   height: 70px;
-  margin-top: 0;
+ /* margin-top: 0; */
 }
