--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,9 +14,8 @@ li {
   background-color: #191970;
   color: #fff;
   height: 90px;
-  margin-top: 0;
-  /* */
-  margin-bottom: 0;
+  margin: 0;
+  /* margin-bottom: 0;　margin-top: 0;　*/
 }
 
 #title {
