--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ li {
   background-color: #191970;
   color: #fff;
   height: 90px;
-  margin: 0;
+  margin: 0px 0px 0px 0px;
   /* margin-bottom: 0;　margin-top: 0;　*/
 }
 
