--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,8 +13,8 @@ li {
 .header {
   background-color: #191970;
   color: #fff;
-  height: 70px;
-  margin: 0px 0px 0px 0px;
+  height: 90px;
+  margin: 0px 0px;
   /* margin-bottom: 0;　margin-top: 0;　*/
 }
 
