--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,12 +14,12 @@ li {
   background-color: #191970;
   color: #fff;
   height: 90px;
-  margin: 0px 0px;
+  /* margin: 0px 0px;*/
   /* margin-bottom: 0;　margin-top: 0;　*/
 }
 
 #title {
-  margin-top: 0;
+/*  margin-top: 0; */
 }
 
 /* header-logoの文字の大きさを36px、floatプロパティをleftにしてください */
