--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ body {
 li {
   list-style: none;
   float: right;  
-  /* 上・右・下・左のpaddingを40px、20px、20px、20pxにしてください */
+  /* 上, 右, 下, 左のpaddingを40px, 20px, 20px, 20pxにしてください */
   padding: 35px 40px 20px 20px;
 }
 
@@ -19,18 +19,18 @@ li {
   color: #fff;
   height: 90px;
   /* margin: 0px 0px;*/
-  /* margin-bottom: 0;　margin-top: 0;　*/
+  /* margin-bottom: 0; margin-top: 0; */
 }
 
 #title {
 /*  margin-top: 0; */
 }
 
-/* header-logoの文字の大きさを36px、floatプロパティをleftにしてください */
+/* header-logoの文字の大きさを36px, floatプロパティをleftにしてください */
 .header-logo {
   float: left;
   font-size: 36px;
-/* 上下のpaddingを20px、左右のpaddingを40pxにしてください */
+/* 上下のpaddingを20px, 左右のpaddingを40pxにしてください */
   padding: 20px 40px;
   /* margin-top: 0; */
 }
