--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,4 @@
+/* header上の謎の余白はcode中の"全角スペース"(comment部分中含む)が原因? (ref: https://ogatanoyarou.com/index.php/2021/03/09/154/) */
 * {
   margin: 0px;
   padding: 0px;
@@ -18,13 +19,11 @@ li {
   background-color: #191970;
   color: #fff;
   height: 90px;
-  /* margin: 0px 0px;*/
-  /* margin-bottom: 0; margin-top: 0; */
 }
 
-#title {
-/*  margin-top: 0; */
-}
+/* #title { */
+/* margin-top: 0; */
+/* }
 
 /* header-logoの文字の大きさを36px, floatプロパティをleftにしてください */
 .header-logo {
@@ -32,7 +31,6 @@ li {
   font-size: 36px;
 /* 上下のpaddingを20px, 左右のpaddingを40pxにしてください */
   padding: 20px 40px;
-  /* margin-top: 0; */
 }
 
 .main {
@@ -43,5 +41,4 @@ li {
 .footer {
   background-color: #191970;
   height: 70px;
- /* margin-top: 0; */
 }
