--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,7 +34,7 @@ li {
   height: 600px;
 }
 
-.main { width:250px;height:150px;float:left; }
+.contents-item1 { width:250px;height:150px;float:left; }
 
 .footer {
   background-color: #191970;
