--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,12 +32,14 @@ li {
 .main {
   background-color: #ffffe0;
   height: 600px;
-  
+}
+
+.content {
   margin: 10px 0 10px 0;
   display: flex;
 }
-
-.image{
+  
+.image {
     width: 25%;
     height: 200px;
     background-color: #eee;
