--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,7 +34,16 @@ li {
   height: 600px;
 }
 
+.content { display: flex; }
 
+.flex-item {
+  background-color: #eee;
+  margin: 10px;
+  padding: 50px 0;
+}
+
+.item1 { flex-grow: 1; }
+.item2 { flex-grow: 2; }
 
 
 .footer {
