--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,7 +34,9 @@ li {
   height: 600px;
 }
 
-.content { display: flex; }
+.content {
+  display: flex; 
+}
 
 .flex-item {
   background-color: #eee;
@@ -42,8 +44,12 @@ li {
   padding: 50px 0;
 }
 
-.item1 { flex-grow: 1; }
-.item2 { flex-grow: 2; }
+.item1 {
+  flex-grow: 1; 
+}
+.item2 {
+  flex-grow: 2;
+}
 
 
 .footer {
