--- a/stylesheet_2.css
+++ b/stylesheet_2.css
@@ -34,42 +34,41 @@ li {
   height: 600px;
 }
 
-.content {
-  display: flex; 
+/* ################################### */
+.wrap {
+  display: flex;
+  /* 親要素の横幅を超えた子要素は折り返し複数行に配置する */
+  flex-wrap: wrap;
 }
 
-.flex-item {
-  background-color: #eee;
-  margin: 10px; 
-  /* 50px */
-  padding: 80px 0;
+.item {
+  padding: 30px;
+  width: 32%;
+  background-color: #fff;
 }
 
-.item1 {
-  flex-grow: 2; 
-}
-.item2 {
-  flex-grow: 1;
+.item:not(:nth-child(2n+2)) {
+  margin-right: 2%;
 }
 
-.content_b {
-  display: flex; 
+.item:nth-child(n+3) {
+  margin-top: 30px;
 }
 
-.flex-item_b {
-  background-color: #eee;
-  margin: 10px; 
-  /* 50px */
-  padding: 80px 0;
-}
+@media not all and (min-width: 768px) {
+  .item {
+    width: 100%;
+  }
 
-.item3 {
-  flex-grow: 2; 
-}
-.item4 {
-  flex-grow: 1;
-}
+  .item:not(:nth-child(2n+2)) {
+    margin-right: 0;
+  }
 
+  .item:nth-child(n+2) {
+    margin-top: 30px;
+  }
+}
+/* ################################### */
 
 .footer {
   background-color: #191970;
