--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,8 +36,8 @@ li {
 
 /* ################################### */
 .content{
-    margin: 10px 0 10px 0;
     display: flex;
+    flex-wrap: wrap;
 }
 .image{
     width: 25%;
