--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,6 +35,11 @@ li {
 }
 
 /* ################################### */
+.content {
+    position: content;
+    width: 1000px;
+}
+
 .image_1 {
     padding: 30px;
     background-color: #eee;
