--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,8 +44,9 @@ li {
   background-color: #eee;
   height: 300px;
   width: 400px;
-  right: 0;
+  left: 0;
   top: 0;
+  padding: 30px;
 }
 
 .image_2 {
@@ -53,14 +54,15 @@ li {
   background-color: #eee;
   height: 300px;
   width: 350px;
-  left: 0;
+  right: 0;
   top: 0;
+  padding: 30px;
 }
 
 .image_3 {
   position: absolute;
   background-color: #eee;
-  height: 300px;
+  height: 200px;
   width: 400px;
   left: 0;
   bottom: 0;
@@ -69,7 +71,7 @@ li {
 .image_4 {
   position: absolute;
   background-color: #eee;
-  height: 300px;
+  height: 200px;
   width: 350px;
   right: 0;
   bottom: 0;
