--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,21 +42,19 @@ li {
 .image_1 {
   position: absolute;
   background-color: #eee;
-  height: 400px;
+  height: 300px;
   width: 550px;
-  left: 0;
-  top: 0;
-  padding: 30px;
+  left: 30px;
+  top: 30px;
 }
 
 .image_2 {
   position: absolute;
   background-color: #eee;
-  height: 400px;
+  height: 300px;
   width: 450px;
-  right: 0;
-  top: 0;
-  padding: 30px;
+  right: 30px;
+  top: 30px;
 }
 
 
