--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,6 +44,7 @@ li {
   background-color: #eee;
   top: 30px;
   left: 30px;
+  right: 580px;
   height: 300px;
   width: 550px;
 }
@@ -53,6 +54,7 @@ li {
   background-color: #eee;
   top: 30px;
   right: 30px;
+  left: 480px;
   height: 300px;
   width: 450px;
 }
