--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,6 +49,7 @@ li {
   position: absolute;
   background-color: #eee;
   top: 30px;
+  right: 30px;
   left: 30px;
   height: 300px;
   width: 550px;
