--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,6 +55,15 @@ li {
   width: 550px;
 }
 
+.image_2 {
+  position: absolute;
+  background-color: #eee;
+  top: 30px;
+  right: -30px;
+  left: -30px;
+  height: 300px;
+  width: 450px;
+}
 
 
 
