--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,7 +46,8 @@ li {
 }
 
 .image_1 {
-  position: absolute;
+  /* position: absolute; */
+  float: left;
   background-color: #eee;
   top: 30px;
   right: 30px;
@@ -56,7 +57,8 @@ li {
 }
 
 .image_2 {
-  position: absolute;
+  /* position: absolute; */
+  float: right;
   background-color: #eee;
   top: 30px;
   right: 30px;
@@ -65,6 +67,15 @@ li {
   width: 450px;
 }
 
+.image_3 {
+clear: both;
+ background-color: #eee;
+  top: 30px;
+  right: 30px;
+  left: 300px;
+  height: 300px;
+  width: 550px;
+}
 
 
 /* ################################### */
