--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,7 +50,7 @@ li {
   float: left;
   background-color: #eee;
   top: 30px;
-  right: 30px;
+  right: 300px;
   left: 30px;
   height: 300px;
   width: 550px;
@@ -77,6 +77,15 @@ clear: both;
   width: 550px;
 }
 
+.image_4 {
+ float: right;
+ background-color: #eee;
+  top: 30px;
+  right: 30px;
+  left: 300px;
+  height: 100px;
+  width: 450px;
+}
 
 /* ################################### */
 
