--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ li {
   /* position: absolute; */
   float: left;
   background-color: #eee;
-  top: 30px;
+  top: 60px;
   right: 300px;
   left: 30px;
   height: 300px;
@@ -68,7 +68,8 @@ li {
 }
 
 .image_3 {
-clear: both;
+ clear: both;
+ float: left;
  background-color: #eee;
   top: 30px;
   right: 30px;
