--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,13 +38,13 @@ li {
 .content {
   position: relative;
   width: 100%;
-  gap: 20px 30px;
+  max-width: 100%;
+  height: auto;
 }
 
 .content:before {
   content: "";
   padding: 10%;
-  gap: 30%;
 }
 
 .image_1 {
