--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,7 +39,8 @@ li {
   position: relative;
   width: 100%;
   max-width: 100%;
-  height: auto;
+  height: 100%;
+  /* auto; */
 }
 
 .content:before {
