--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,7 +37,7 @@ li {
 /* ################################### */
 .content {
   position: relative;
-  width: 100%;
+  width: 1000px;
   max-width: 100%;
   height: 100%;
   /* auto; */
