--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,62 +35,19 @@ li {
 }
 
 /* ################################### */
-.content {
-  position: relative;
-  width: 1000px;
-  max-width: 100%;
-  height: 100%;
-  /* auto; */
-}
-
-.content:before {
-  content: "";
-  padding: 10%;
-}
-
 .image_1 {
-  /* position: absolute; */
-  float: left;
-  background-color: #eee;
-  top: 60px;
-  right: 300px;
-  left: 30px;
-  height: 300px;
-  width: 550px;
+ background: #eee;
+ display: inline-block;
+ width: 550px;
+ height: 300px;
 }
 
 .image_2 {
-  /* position: absolute; */
-  float: right;
-  background-color: #eee;
-  top: 30px;
-  right: 30px;
-  left: 300px;
-  height: 300px;
-  width: 450px;
+ background: #eee;
+ display: inline-block;
+ width: 450px;
+ height: 300px;
 }
-
-.image_3 {
- clear: both;
- float: left;
- background-color: #eee;
-  top: 30px;
-  right: 30px;
-  left: 300px;
-  height: 100px;
-  width: 550px;
-}
-
-.image_4 {
- float: right;
- background-color: #eee;
-  top: 30px;
-  right: 30px;
-  left: 300px;
-  height: 100px;
-  width: 450px;
-}
-
 /* ################################### */
 
 .footer {
