--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,31 +35,39 @@ li {
 }
 
 /* ################################### */
-.image_1 {
- background: #eee;
- display: inline-block;
- width: 550px;
- height: 300px;
+.flex_test-box {
+    background-color: #eee;     /* 背景色指定 */
+    padding:  10px;             /* 余白指定 */
+    height: 300px;              /* 高さ指定 */
+    display: flex;              /* フレックスボックスにする */
+    flex-wrap: wrap;            /* 折り返し指定 */
+    align-content:stretch;      /* 折り返し時の配置指定 */
 }
-
-.image_2 {
- background: #eee;
- display: inline-block;
- width: 450px;
- height: 300px;
+ 
+.flex_test-item {
+    padding: 10px;
+    color:  #fff;               /* 文字色 */
+    margin:  10px;              /* 外側の余白 */
+    border-radius:  5px;        /* 角丸指定 */
+    font-size:  30px;           /* 文字サイズ */
+    width: 200px;               /* 幅指定 */
+    text-align:  center;        /* 文字中央揃え */
 }
-
-.image_3 {
- background: #eee;
- width: 550px;
- height: 100px;
+ 
+.flex_test-item:nth-child(1) {
+    background-color:  #2196F3; /* 背景色指定 */
 }
-
-.image_4 {
- background: #eee;
- display: inline-block;
- width: 450px;
- height: 100px;
+ 
+.flex_test-item:nth-child(2) {
+    background-color:  #4CAF50; /* 背景色指定 */
+}
+ 
+.flex_test-item:nth-child(3) {
+    background-color: #3F51B5; /* 背景色指定 */
+}
+ 
+.flex_test-item:nth-child(4) {
+    background-color:  #00BCD4; /* 背景色指定 */
 }
 /* ################################### */
 
