--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ li {
 }
 
 /* ################################### */
-.flex_test-box {
+.main {
     background-color: #eee;     /* 背景色指定 */
     padding:  10px;             /* 余白指定 */
     height: 300px;              /* 高さ指定 */
