--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,38 +36,38 @@ li {
 
 /* ################################### */
 .main {
-    background-color: #eee;     /* 背景色指定 */
-    padding:  10px;             /* 余白指定 */
+    padding: 10px;             /* 余白指定 */
     height: 300px;              /* 高さ指定 */
     display: flex;              /* フレックスボックスにする */
     flex-wrap: wrap;            /* 折り返し指定 */
     align-content:stretch;      /* 折り返し時の配置指定 */
 }
  
-.flex_test-item {
+.image {
     padding: 10px;
-    color:  #fff;               /* 文字色 */
+    color:  #000;               /* 文字色 */
     margin:  10px;              /* 外側の余白 */
     border-radius:  5px;        /* 角丸指定 */
     font-size:  30px;           /* 文字サイズ */
-    width: 200px;               /* 幅指定 */
+    width: 550px 450px 550px 450px;               /* 幅指定 */
+    height: 300px 300px 100px 100px; 
     text-align:  center;        /* 文字中央揃え */
 }
  
-.flex_test-item:nth-child(1) {
-    background-color:  #2196F3; /* 背景色指定 */
+.image:nth-child(Top picture) {
+    background-color:  #eee; /* 背景色指定 */
 }
  
-.flex_test-item:nth-child(2) {
-    background-color:  #4CAF50; /* 背景色指定 */
+.image:nth-child(今週の一枚) {
+    background-color:  #eee; /* 背景色指定 */
 }
  
-.flex_test-item:nth-child(3) {
-    background-color: #3F51B5; /* 背景色指定 */
+.image:nth-child(Diary) {
+    background-color: #eee; /* 背景色指定 */
 }
  
-.flex_test-item:nth-child(4) {
-    background-color:  #00BCD4; /* 背景色指定 */
+.image:nth-child(今週の注目レース) {
+    background-color:  #eee; /* 背景色指定 */
 }
 /* ################################### */
 
