--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,15 +29,16 @@ li {
   padding: 20px 40px;
 }
 
-.main {
-  background-color: #ffffe0;
-  height: 600px;
-}
+/* .main { */
+  /* background-color: #ffffe0; */
+  /* height: 600px; */
+} */
 
 /* ################################### */
 .main {
+    background-color: #ffffe0;
+    height: 600px;             /* 高さ指定 */
     padding: 10px;             /* 余白指定 */
-    height: 300px;              /* 高さ指定 */
     display: flex;              /* フレックスボックスにする */
     flex-wrap: wrap;            /* 折り返し指定 */
     align-content:stretch;      /* 折り返し時の配置指定 */
@@ -47,7 +48,6 @@ li {
     padding: 10px;
     color:  #000;               /* 文字色 */
     margin:  10px;              /* 外側の余白 */
-    border-radius:  5px;        /* 角丸指定 */
     font-size:  30px;           /* 文字サイズ */
     width: 550px 450px 550px 450px;               /* 幅指定 */
     height: 300px 300px 100px 100px; 
