--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,8 +49,7 @@ li {
     color:  #000;               /* 文字色 */
     margin:  10px;              /* 外側の余白 */
     font-size:  30px;           /* 文字サイズ */
-    width: 550px 450px 550px 450px;               /* 幅指定 */
-    height: 300px 300px 100px 100px; 
+    width: 200px;               /* 幅指定 */
     text-align:  center;        /* 文字中央揃え */
 }
  
