--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,16 +29,11 @@ li {
   padding: 20px 40px;
 }
 
-/* .main { */
-  /* background-color: #ffffe0; */
-  /* height: 600px; */
-/* } */
-
 /* ################################### */
 .main {
-    background-color: #ffffe0;
-    padding: 10px;             /* 余白指定 */
-    height: 600px;             /* 高さ指定 */
+    background-color: #ffffe0;     /* 背景色指定 */
+    padding:  10px;             /* 余白指定 */
+    height: 600px;              /* 高さ指定 */
     display: flex;              /* フレックスボックスにする */
     flex-wrap: wrap;            /* 折り返し指定 */
     align-content:stretch;      /* 折り返し時の配置指定 */
@@ -46,27 +41,28 @@ li {
  
 .image {
     padding: 10px;
-    color:  #000;               /* 文字色 */
+    color:  #fff;               /* 文字色 */
     margin:  10px;              /* 外側の余白 */
-    font-size:  30px;           /* 文字サイズ */
+    border-radius:  5px;        /* 角丸指定 */
+    font-size:  20px;           /* 文字サイズ */
     width: 200px;               /* 幅指定 */
     text-align:  center;        /* 文字中央揃え */
 }
  
-.image:nth-child(Top picture) {
-    background-color: #eee; /* 背景色指定 */
+.flex_test-item:nth-child(1) {
+    background-color:  #2196F3; /* 背景色指定 */
 }
  
-.image:nth-child(今週の一枚) {
-    background-color: #eee; /* 背景色指定 */
+.flex_test-item:nth-child(2) {
+    background-color:  #4CAF50; /* 背景色指定 */
 }
  
-.image:nth-child(Diary) {
-    background-color: #eee; /* 背景色指定 */
+.flex_test-item:nth-child(3) {
+    background-color: #3F51B5; /* 背景色指定 */
 }
  
-.image:nth-child(今週の注目レース) {
-    background-color: #eee; /* 背景色指定 */
+.flex_test-item:nth-child(4) {
+    background-color:  #00BCD4; /* 背景色指定 */
 }
 /* ################################### */
 
