--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,19 +49,19 @@ li {
     text-align:  center;        /* 文字中央揃え */
 }
  
-.flex_test-item:nth-child(1) {
+.image:nth-child(1) {
     background-color:  #2196F3; /* 背景色指定 */
 }
  
-.flex_test-item:nth-child(2) {
+.image:nth-child(2) {
     background-color:  #4CAF50; /* 背景色指定 */
 }
  
-.flex_test-item:nth-child(3) {
+.image:nth-child(3) {
     background-color: #3F51B5; /* 背景色指定 */
 }
  
-.flex_test-item:nth-child(4) {
+.image:nth-child(4) {
     background-color:  #00BCD4; /* 背景色指定 */
 }
 /* ################################### */
