--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,7 +54,7 @@ li {
 /* nth-child()内の数字はimageに指定したリスト?の"n番目の要素"を意味する */
 .image_1:nth-child(1) {
     background-color:  #2196F3; /* 背景色指定 */
-    /* flex-grow: 1;                幅指定 */
+    flex-grow: 2;               /* 幅指定 */
 }
  
 .image_2 {
@@ -85,6 +85,7 @@ li {
 
 .image_3:nth-child(1) {
     background-color: #3F51B5; /* 背景色指定 */
+    flex-grow: 2;
 }
  
 .image_4 {
