--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,74 +33,49 @@ li {
 .main {
     background-color: #ffffe0;     /* 背景色指定 */
     padding:  10px;             /* 余白指定 */
-    height: 600px;              /* 高さ指定 */
+    height: 600px;              /* 高さ指定 x 600px */
     width: 100%;
     display: flex;              /* フレックスボックスにする */
     flex-wrap: wrap;            /* 折り返し指定 */
     align-content: center;      /* 折り返し時の配置指定 x stretch */
 }
  
-.image_1 {
+.image {
     padding: 10px;
     color:  #000;               /* 文字色 */
     margin:  10px;              /* 外側の余白 */
     border-radius:  5px;        /* 角丸指定 */
     font-size:  20px;           /* 文字サイズ */
-    width: 550px;               /* 幅指定 */
-    height: 400px;               /* 幅指定 */
     text-align:  center;        /* 文字中央揃え */
 }
  
 /* nth-child()内の数字はimageに指定したリスト?の"n番目の要素"を意味する */
-.image_1:nth-child(1) {
+.image:nth-child(1) {
     background-color:  #2196F3; /* 背景色指定 */
+      width: 550px;               /* 幅指定 */
+    height: 400px;               /* 幅指定 */
     flex-grow: 2;               /* 幅指定 */
 }
- 
-.image_2 {
-    padding: 10px;
-    color:  #000;               /* 文字色 */
-    margin:  10px;              /* 外側の余白 */
-    border-radius:  5px;        /* 角丸指定 */
-    font-size:  20px;           /* 文字サイズ */
-    width: 350px;               /* 幅指定 */
-    height: 400px;               /* 幅指定 */
-    text-align:  center;        /* 文字中央揃え */
-}
 
-.image_2:nth-child(1) {
+.image:nth-child(2) {
     background-color:  #4CAF50; /* 背景色指定 */
-}
- 
-.image_3 {
-    padding: 10px;
-    color:  #000;               /* 文字色 */
-    margin:  10px;              /* 外側の余白 */
-    border-radius:  5px;        /* 角丸指定 */
-    font-size:  20px;           /* 文字サイズ */
-    width: 550px;               /* 幅指定 */
-    height: 100px;               /* 幅指定 */
-    text-align:  center;        /* 文字中央揃え */
-}
+        width: 350px;               /* 幅指定 */
+    height: 400px;               /* 幅指定 */
+    flex-grow: 1;
+} 
 
-.image_3:nth-child(1) {
+.image:nth-child(3) {
     background-color: #3F51B5; /* 背景色指定 */
+      width: 550px;               /* 幅指定 */
+    height: 100px;               /* 幅指定 */
     flex-grow: 2;
 }
- 
-.image_4 {
-    padding: 10px;
-    color:  #000;               /* 文字色 */
-    margin:  10px;              /* 外側の余白 */
-    border-radius:  5px;        /* 角丸指定 */
-    font-size:  20px;           /* 文字サイズ */
-    width: 350px;               /* 幅指定 */
-    height: 100px;               /* 幅指定 */
-    text-align:  center;        /* 文字中央揃え */
-}
 
-.image_4:nth-child(1) {
+.image:nth-child(4) {
     background-color:  #00BCD4; /* 背景色指定 */
+      width: 350px;               /* 幅指定 */
+    height: 100px;               /* 幅指定 */
+  flex-grow: 1;
 }
 /* ################################### */
 
