--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,7 +37,7 @@ li {
     width: 100%;
     display: flex;              /* フレックスボックスにする */
     flex-wrap: wrap;            /* 折り返し指定 */
-    align-content: center;      /* 折り返し時の配置指定 x stretch */
+    align-content: stretch;      /* 折り返し時の配置指定 x stretch */
 }
  
 .image {
@@ -54,28 +54,24 @@ li {
     background-color:  #2196F3; /* 背景色指定 */
       width: 550px;               /* 幅指定 */
     height: 400px;               /* 幅指定 */
-    flex-grow: 2;               /* 幅指定 */
 }
 
 .image:nth-child(2) {
     background-color:  #4CAF50; /* 背景色指定 */
         width: 350px;               /* 幅指定 */
     height: 400px;               /* 幅指定 */
-    flex-grow: 1;
 } 
 
 .image:nth-child(3) {
     background-color: #3F51B5; /* 背景色指定 */
       width: 550px;               /* 幅指定 */
     height: 100px;               /* 幅指定 */
-    flex-grow: 2;
 }
 
 .image:nth-child(4) {
     background-color:  #00BCD4; /* 背景色指定 */
       width: 350px;               /* 幅指定 */
     height: 100px;               /* 幅指定 */
-  flex-grow: 1;
 }
 /* ################################### */
 
