--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,6 +47,8 @@ li {
     border-radius:  5px;        /* 角丸指定 */
     font-size:  20px;           /* 文字サイズ */
     text-align:  center;        /* 文字中央揃え */
+   max-width:100%;
+ height:auto;
 }
  
 /* nth-child()内の数字はimageに指定したリスト?の"n番目の要素"を意味する */
