--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ li {
     border-radius:  5px;        /* 角丸指定 */
     font-size:  20px;           /* 文字サイズ */
     text-align:  center;        /* 文字中央揃え */
-    min-height:100%;
+    max-height:100%;
     min-wigth:100%;
 }
  
