--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,10 +36,10 @@ li {
     background-color: #ffffe0;     /* 背景色指定 */
     padding:  10px;             /* 余白指定 */
     height: 600px;              /* 高さ指定 x 600px */
-    width: 100%;
+    /* width: 100%; */
     display: flex;              /* フレックスボックスにする */
     flex-wrap: wrap;            /* 折り返し指定 */
-    align-content: center;      /* 折り返し時の配置指定 x stretch */
+    align-content: stretch;      /* 折り返し時の配置指定 x stretch */
 }
  
 .image {
@@ -50,6 +50,7 @@ li {
     font-size:  20px;           /* 文字サイズ */
     text-align:  center;        /* 文字中央揃え */
     max-wigth:100%;
+    height: auto;        /* 縦横比を保つ */
 }
  
 /* nth-child()内の数字はimageに指定したリスト?の"n番目の要素"を意味する */
