--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,6 +38,7 @@ li {
     display: flex;              /* フレックスボックスにする */
     flex-wrap: wrap;            /* 折り返し指定 */
     align-content: stretch;      /* 折り返し時の配置指定 x stretch */
+  max-wigth:100%;
 }
  
 .image {
