--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ li {
 .main {
     background-color: #ffffe0;     /* 背景色指定 */
     padding:  10px;             /* 余白指定 */
-    height: 100%;              /* 高さ指定 x 600px */
+    height: 100%;              /* 高さ指定 x 600px 100%にしないと画面縮めた時にimageの要素がheader側にはみ出る */
     width: 100%;
     display: flex;              /* フレックスボックスにする */
     flex-wrap: wrap;            /* 折り返し指定 */
@@ -54,24 +54,28 @@ li {
     background-color:  #2196F3; /* 背景色指定 */
     width: 550px;               /* 幅指定 */
     height: 400px;               /* 幅指定 */
+  flex-grow: 2;               /* 幅指定 */
 }
 
 .image:nth-child(2) {
     background-color:  #4CAF50; /* 背景色指定 */
     width: 350px;               /* 幅指定 */
     height: 400px;               /* 幅指定 */
+  flex-grow: 1;
 } 
 
 .image:nth-child(3) {
     background-color: #3F51B5; /* 背景色指定 */
     width: 550px;               /* 幅指定 */
     height: 100px;               /* 幅指定 */
+  flex-grow: 2;               /* 幅指定 */
 }
 
 .image:nth-child(4) {
     background-color:  #00BCD4; /* 背景色指定 */
     width: 350px;               /* 幅指定 */
     height: 100px;               /* 幅指定 */
+  flex-grow: 1;
 }
 /* ################################### */
 
