--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,7 +32,7 @@ li {
 /* ################################### */
 .main {
     background-color: #ffffe0;     /* 背景色指定 */
-    padding:  10px;             /* 余白指定 */
+    /* padding:  10px;             余白指定 */
     height: 100%;              /* 高さ指定 x 600px 100%にしないと画面縮めた時にimageの要素がheader側にはみ出る */
     width: 100%;
     display: flex;              /* フレックスボックスにする */
@@ -41,7 +41,8 @@ li {
 }
  
 .image {
-    padding: 10px;
+   /* padding: 10px; */
+      padding: 10%;
     color:  #000;               /* 文字色 */
     margin:  10px;              /* 外側の余白 */
     border-radius:  5px;        /* 角丸指定 */
@@ -52,30 +53,26 @@ li {
 /* nth-child()内の数字はimageに指定したリスト?の"n番目の要素"を意味する */
 .image:nth-child(1) {
     background-color:  #2196F3; /* 背景色指定 */
-    width: 550px;               /* 幅指定 */
-    height: 400px;               /* 幅指定 */
-  flex-grow: 2;               /* 幅指定 */
+    width: 55%;               /* 幅指定 550px */
+    height: 50%;               /* 幅指定 400px */
 }
 
 .image:nth-child(2) {
     background-color:  #4CAF50; /* 背景色指定 */
-    width: 350px;               /* 幅指定 */
-    height: 400px;               /* 幅指定 */
-  flex-grow: 1;
+    width: 35%;               /* 幅指定 350px */
+    height: 40%;               /* 幅指定 400px */
 } 
 
 .image:nth-child(3) {
     background-color: #3F51B5; /* 背景色指定 */
-    width: 550px;               /* 幅指定 */
-    height: 100px;               /* 幅指定 */
-  flex-grow: 2;               /* 幅指定 */
+    width: 55%;               /* 幅指定 550px */
+    height: 30%;               /* 幅指定 100px */
 }
 
 .image:nth-child(4) {
     background-color:  #00BCD4; /* 背景色指定 */
-    width: 350px;               /* 幅指定 */
-    height: 100px;               /* 幅指定 */
-  flex-grow: 1;
+    width: 35%;               /* 幅指定 350px */
+    height: 30%;               /* 幅指定 100px */
 }
 /* ################################### */
 
