--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,26 +53,26 @@ li {
 /* nth-child()内の数字はimageに指定したリスト?の"n番目の要素"を意味する */
 .image:nth-child(1) {
     background-color:  #2196F3; /* 背景色指定 */
-    width: 55%;               /* 幅指定 550px */
-    height: 50%;               /* 幅指定 400px */
+    width: 550px;               /* 幅指定 550px 55%*/
+    height: 400px;               /* 幅指定 400px 50%*/
 }
 
 .image:nth-child(2) {
     background-color:  #4CAF50; /* 背景色指定 */
-    width: 35%;               /* 幅指定 350px */
-    height: 40%;               /* 幅指定 400px */
+    width: 350px;               /* 幅指定 350px 35%*/
+    height: 400px;               /* 幅指定 400px 40%*/
 } 
 
 .image:nth-child(3) {
     background-color: #3F51B5; /* 背景色指定 */
-    width: 55%;               /* 幅指定 550px */
-    height: 30%;               /* 幅指定 100px */
+    width: 550px;               /* 幅指定 550px 55%*/
+    height: 100px;               /* 幅指定 100px 30%*/
 }
 
 .image:nth-child(4) {
     background-color:  #00BCD4; /* 背景色指定 */
-    width: 35%;               /* 幅指定 350px */
-    height: 30%;               /* 幅指定 100px */
+    width: 350px;               /* 幅指定 350px 35%*/
+    height: 100px;               /* 幅指定 100px 30%*/
 }
 /* ################################### */
 
