--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,17 +32,16 @@ li {
 /* ################################### */
 .main {
     background-color: #ffffe0;     /* 背景色指定 */
-    /* padding:  10px;             余白指定 */
+    padding:  10px;             /* 余白指定 */
     height: 100%;              /* 高さ指定 x 600px 100%にしないと画面縮めた時にimageの要素がheader側にはみ出る */
     width: 100%;
-    display: flex;              /* フレックスボックスにする */
-    flex-wrap: wrap;            /* 折り返し指定 */
+    display: table;              /* フレックスボックスにする flex*/
+    flex-wrap: nowrap;            /* 折り返し指定 wrap*/
     align-content: stretch;      /* 折り返し時の配置指定 x stretch */
 }
  
 .image {
-   /* padding: 10px; */
-      padding: 10%;
+    padding: 10px;
     color:  #000;               /* 文字色 */
     margin:  10px;              /* 外側の余白 */
     border-radius:  5px;        /* 角丸指定 */
