--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,8 +35,8 @@ li {
     padding:  10px;             /* 余白指定 */
     height: 100%;              /* 高さ指定 x 600px 100%にしないと画面縮めた時にimageの要素がheader側にはみ出る */
     width: 100%;
-    display: table;              /* フレックスボックスにする flex*/
-    flex-wrap: nowrap;            /* 折り返し指定 wrap*/
+    display: flex;              /* フレックスボックスにする flex table*/
+    flex-wrap: wrap;            /* 折り返し指定 nowwrap*/
     align-content: stretch;      /* 折り返し時の配置指定 x stretch */
 }
  
