--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,8 +40,9 @@ li {
     height: auto;        /* 縦横比を保つ */
   
   display: grid;
-  grid-template-columns: 550px 450px;
+  grid-template-columns: 550px 400px;
   grid-template-rows: 300px 200px;
+  grid-gap 10px;
 }
  
 .image {
