--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,9 +40,11 @@ li {
     height: auto;        /* 縦横比を保つ */
   
   display: grid;
-  grid-template-columns: 550px 450px; /* 横 */
-  grid-template-rows: 400px 200px; /* 縦 */
-  grid-gap 20px;
+  /* grid-template-columns: 550px 450px;  横 */
+  /* grid-template-rows: 400px 200px; 縦 */
+  /* grid-gap 20px; */
+  grid-template-columns: 2fr 1fr; /* 2:1 */
+  grid-template-rows: 2fr 1fr; /* 2:1 */
 }
  
 .image {
