--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,9 +40,7 @@ li {
     height: auto;        /* 縦横比を保つ */
   
   display: grid;
-  /* grid-template-columns: 550px 450px;  横 */
-  /* grid-template-rows: 400px 200px; 縦 */
-  /* grid-gap 20px; */
+  grid-gap 10px;
   grid-template-columns: 2fr 1fr; /* 2:1 */
   grid-template-rows: 2fr 1fr; /* 2:1 */
 }
@@ -59,26 +57,26 @@ li {
 /* nth-child()内の数字はimageに指定したリスト?の"n番目の要素"を意味する */
 .image:nth-child(1) {
     background-color:  #2196F3; /* 背景色指定 */
-    /* width: 550px;                幅指定 550px 55%*/
-   /* height: 300px;               幅指定 400px 50%*/
+    width: 550px;               /* 幅指定 550px 55%*/
+    height: 300px;              /* 幅指定 400px 50%*/
 }
 
 .image:nth-child(2) {
     background-color:  #4CAF50; /* 背景色指定 */
-   /* width: 450px;                幅指定 350px 35% */
-   /* height: 300px;                幅指定 400px 40% */
+    width: 450px;                /* 幅指定 350px 35% */
+    height: 300px;                /* 幅指定 400px 40% */
 } 
 
 .image:nth-child(3) {
     background-color: #3F51B5; /* 背景色指定 */
-   /* width: 550px;                幅指定 550px 55%*/
-   /* height: 200px;                幅指定 100px 30%*/
+    width: 550px;               /* 幅指定 550px 55%*/
+    height: 200px;              /* 幅指定 100px 30%*/
 }
 
 .image:nth-child(4) {
     background-color:  #00BCD4; /* 背景色指定 */
-    /* width: 450px;                幅指定 350px 35%*/
-    /* height: 200px;                幅指定 100px 30%*/
+    width: 450px;                /* 幅指定 350px 35%*/
+    height: 200px;               /* 幅指定 100px 30%*/
 }
 /* ################################### */
 
