--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,8 +41,8 @@ li {
   
   display: grid;
   grid-gap 10px;
-  grid-template-columns: 2fr 1fr; /* 2:1 */
-  grid-template-rows: 2fr 1fr; /* 2:1 */
+  grid-template-columns: 2fr 1fr; /* 2:1 列(横)分け間隔 */
+  grid-template-rows: 4fr 3fr; /* 4:3 行(縦)分け間隔 */
 }
  
 .image {
