--- a/stylesheet_3.css
+++ b/stylesheet_3.css
@@ -30,6 +30,7 @@ li {
 }
 
 /* ################################### */
+/* ↓ mainは".main {"ではなく"main {"だったかも? */
 .main {
     background-color: #ffffe0;     /* 背景色指定 */
     padding:  10%;             /* 余白指定 10px */
