--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,6 +17,9 @@ main{
     display: flex;
     min-height: 100vh;
     margin: 10px 0 10px 0;
+    max-wigth:100%;
+    min-wigth:100%;
+    height: auto;        /* 縦横比を保つ */
 }
 .content{
     flex: 1;
