--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,14 +20,14 @@ body{
 }
 main{
     display: flex;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     margin: 10px 0 10px 0;
     max-wigth:100%;
     min-wigth:100%;
     height: auto;        /* 縦横比を保つ */
 }
 .content{
-    flex: 2;
+    flex: 1;
     background-color: #eee;
     text-align: center;
     margin-right: 10px;
@@ -36,7 +36,7 @@ main{
     text-align: center;
     background-color: #888;
     color: #fff;
-    width: 250px;
+    width: 450px;
 }
 .footer{
     height: 70px;
