--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,18 +18,17 @@ body{
     background-color: #888;
     color: #fff;
 }
-main{
-    display: flex;
-    /* min-height: 100vh; */
-    margin: 10px 0 10px 0;
-  
-    height: 100%;              /* 高さ指定 x 600px 100%にしないと画面縮めた時にimageの要素がheader側にはみ出る */
+.main {
+    background-color: #ffffe0;     /* 背景色指定 */
+    padding:  10%;             /* 余白指定 10px */
+  display: flex;
+  height: 100%;              /* 高さ指定 x 600px 100%にしないと画面縮めた時にimageの要素がheader側にはみ出る */
     width: 100%;
     max-wigth:100%;
     min-wigth:100%;
     height: auto;        /* 縦横比を保つ */
-  
 }
+
 .content{
     flex: 1;
     background-color: #eee;
