--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,8 @@ body{
 
 main{
     display: flex;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    height 100%;
     margin: 10px 0 10px 0;
     right: 0px;
 }
