--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,10 +22,10 @@ main{
     margin: 10px 0 10px 0;
     right: 0px;
 }
-.content-area{
-    display: grid;
-   /* flex: 1; */
-}
+/* .content-area{ */
+  /*  display: grid; */
+    flex: 1; */
+/* } */
 .content{
     display: grid 2fr 1fr;
     gap: 2%;
@@ -36,7 +36,7 @@ main{
 }
 .localNavigation{
     display: grid;
-    flex: 2;
+    flex: 1;
     text-align: center;
     background-color: #888;
     color: #fff;
