--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
 }
 
 .wrapper {
-  max-width: 1000px;
+  max-width: 2000px;
   margin: 0 auto;
 }
 
@@ -19,7 +19,7 @@ body{
 }
 
 .glovalNavigation{
-    height: 70px;
+    height: 40px;
     text-align: center;
     background-color: #888;
     color: #fff;
@@ -33,7 +33,7 @@ main{
     right: 0px;
 }
 .content-area{
-  background: #808080;
+  background: #eee;
       width: 40%;
 }
 /* .content{ */
