--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,13 +8,13 @@ body{
     flex-direction: column;
 }
 .header{
-    height: 70px;
+    height: 20vh; /* height: 70px; */
     background-color: #eee;
     text-align: center;
 }
 
 .glovalNavigation{
-    height: 40px;
+    height: 15vh;
     text-align: center;
     background-color: #888;
     color: #fff;
@@ -23,7 +23,7 @@ body{
 main{
     display: flex;
     /* min-height: 100vh; */
-    height 100%;
+    height 55vh;
     margin: 10px 0 10px 0;
     right: 0px;
 }
@@ -48,7 +48,7 @@ main{
     width: 60vw;
 }
 .footer{
-    height: 70px;
+    height: 10vh;
     text-align: center;
     background-color: #eee;
 }
